# push2video

./: README.md
common/: README.md
common/protos/: push2talk_service.proto
k8s/: README.md  ptt_envoy.yaml  ptt_install.sh  ptt_server.yaml  ptt_signalling.yaml  ptt_web.yaml
k8s/certs/: server.crt  server.key
k8s/config/: envoy.yaml
server/: CMakeLists.txt  CMakeLists.txt.in  Dockerfile  README.md
server/application/: Application.cpp
server/application/grpc/: GrpcService.hpp  GrpcServiceImpl.cpp
server/application/gstreamer/: AudioPipelineHandler.hpp  AudioPipelineHandlerImpl.cpp  GroupSendRecvHandler.hpp  GroupSendRecvHandlerImpl.cpp  GstMediaUtils.hpp  GstMediaUtilsImpl.cpp  VideoPipelineHandler.hpp  VideoPipelineHandlerImpl.cpp  WebRtcAudioPeer.hpp  WebRtcAudioPeerImpl.cpp  WebRtcPeer.hpp  WebRtcPeerImpl.cpp
server/application/utils/: Push2TalkUtils.hpp  Push2TalkUtilsImpl.cpp
server/protos/: README.md
signalling/: Dockerfile  README.md  pom.xml
signalling/src/main/java/push2video/: Application.java
signalling/src/main/java/push2video/bridge/: GrpcWebsocketBridge.java
signalling/src/main/java/push2video/grpc/: Push2VideoClient.java  Push2VideoGrpcClientImpl.java  Push2VideoGrpcServiceImpl.java  Push2VideoService.java
signalling/src/main/java/push2video/utils/: Constants.java  Push2VideoUtils.java
signalling/src/main/java/push2video/websocket/: MessageDecoder.java  MessageEncoder.java  SignallingWebsocketHandler.java  WebSocketServer.java
signalling/src/main/resources/: log4j2.xml  server.jks
signalling/src/test/java/push2video/: TestApplication.java
web/: Dockerfile  README.md  index.html  nginx.conf  push2video.html  push2video.js
